# ez-pool

./: .gitignore  CMakeLists.txt  README.md  postconfig.cmake
cmake/: postconfig.cmake
include/ez/: LMemoryPool.hpp  MemoryPool.hpp  ObjectPool.hpp
include/ez/intern/: MemoryBlock.hpp
tests/: CMakeLists.txt  basic.cpp  block.cpp  object_pool.cpp
tests/basic/: CMakeLists.txt  basic.cpp  block.cpp
tests/strings/: CMakeLists.txt  strings.cpp
